[gd_scene load_steps=11 format=3 uid="uid://dijubl4kxp0u0"]

[ext_resource type="Script" path="res://scripts/neighborhood/trash.gd" id="1_yip0f"]
[ext_resource type="PackedScene" uid="uid://cvpkttunkn2nj" path="res://shortcuts/interaction area/interaction_area.tscn" id="2_om6g2"]
[ext_resource type="Texture2D" uid="uid://ck0it0yo8jjdk" path="res://assets/sprites/trash/trashcan.png" id="2_tm1fq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w8cid"]
radius = 23.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_etmko"]
texture = ExtResource("2_tm1fq")
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0

[sub_resource type="TileSet" id="TileSet_dxu6h"]
sources/0 = SubResource("TileSetAtlasSource_etmko")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2td54"]
texture = ExtResource("2_tm1fq")
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0

[sub_resource type="TileSet" id="TileSet_hkuei"]
sources/0 = SubResource("TileSetAtlasSource_2td54")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8cn70"]
texture = ExtResource("2_tm1fq")
4:0/0 = 0
5:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0

[sub_resource type="TileSet" id="TileSet_sm8v7"]
sources/0 = SubResource("TileSetAtlasSource_8cn70")

[node name="Trash" type="Node2D"]
script = ExtResource("1_yip0f")

[node name="InteractionArea" parent="." instance=ExtResource("2_om6g2")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_w8cid")

[node name="PromptLabel" type="Label" parent="."]
visible = false
z_index = 50
offset_left = -47.0
offset_top = -36.0
offset_right = 53.0
offset_bottom = -13.0
text = "[F] to pick up"

[node name="CollectionLabel" type="Label" parent="."]
visible = false
z_index = 50
offset_left = -35.0
offset_top = -34.0
offset_right = 36.0
offset_bottom = -11.0
text = "+1 Trash"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EmptyTrash" type="TileMap" parent="."]
position = Vector2(-3.55271e-15, 0)
scale = Vector2(0.3, 0.3)
tile_set = SubResource("TileSet_dxu6h")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 65536, 1, 65535, 65536, 2, 131071, 65536, 3, -65536, 131072, 1, 0, 131072, 2, 65536, 131072, 3, -65535, 196608, 1, 1, 196608, 2, 65537, 196608, 3)

[node name="HalfEmptyTrash" type="TileMap" parent="."]
position = Vector2(-2, 0)
scale = Vector2(0.3, 0.3)
tile_set = SubResource("TileSet_hkuei")
format = 2
layer_0/tile_data = PackedInt32Array(-65537, 262144, 0, -1, 262144, 1, 65535, 262144, 2, 131071, 262144, 3, -131072, 327680, 0, -65536, 327680, 1, 0, 327680, 2, 65536, 327680, 3, -65535, 393216, 1, 1, 393216, 2, 65537, 393216, 3)

[node name="FullTrash" type="TileMap" parent="."]
scale = Vector2(0.3, 0.3)
tile_set = SubResource("TileSet_sm8v7")
format = 2
layer_0/tile_data = PackedInt32Array(-65538, 458752, 0, -2, 458752, 1, 131070, 458752, 3, -65537, 524288, 0, -1, 524288, 1, 65535, 524288, 2, 131071, 524288, 3, -131072, 589824, 0, -65536, 589824, 1, 0, 589824, 2, 65536, 589824, 3, -65535, 655360, 1, 1, 655360, 2, 65537, 655360, 3, 65538, 720896, 3)
